<resources>
    <string name="app_name">Level2.1</string>
    <string name="profile_view_settings">Settings</string>
    <string name="profile_view_name">Lucile Alvarado</string>
    <string name="profile_view_profession">Graphic designer</string>
    <string name="profile_view_adress">5295 Gaylord Walks Apk. 110</string>
    <string name="profile_view_edit_btn">Edit Profile</string>
    <string name="profile_view_contacts_btn">view my contacts</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="reg_view_let_s_get_acquainted">Let\'s get acquainted</string>
    <string name="reg_view_fillOut">Fill out the profile and go to the application!</string>
    <string name="signUp_chBx_text">Remember me</string>
    <string name="signUp_activ_regBtn_txt">register</string>
    <string name="reg_view_msg_terms">By clicking Register you agree to our Terms \n and Conditions</string>
    <string name="reg_activity_have_acc_msg">Already have an account?</string>
    <string name="reg_activity_sing_up_txtBtn">Sign in</string>
    <string name="wrong_pass_msg">Short or empty pass!</string>
    <string name="wrong_mail_msg">Wrong e-mail!</string>
    <string name="username_hint">Username</string>
    <string name="career_hint">Career</string>
    <string name="email_placeholder">name@gmail.com</string>
    <string name="phone_hint">Phone</string>
    <string name="phone_placeholder">(123)-456-7890)</string>
    <string name="address_hint">Address</string>
    <string name="data_paceholder">01/01/1900</string>
    <string name="btn_save_txt">SAVE</string>
    <string name="tv_title_add_contact_fragment">Add contact</string>
    <string name="tv_contacts_title">Contacts</string>
    <string name="tv_Btn_add_contact">Add contacts</string>
    <string name="date_of_birth_hint">Date of birth</string>
    <string name="tv_profile">Profile</string>
    <string name="btn_tv_message">Message</string>
</resources>