<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        tools:context=".SingUpActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signUpViewTopTv"
            style="@style/signUp_lets_get_textView"
            android:layout_marginStart="@dimen/main_paddings_16"
            android:layout_marginEnd="@dimen/main_paddings_16"
            android:text="@string/reg_view_let_s_get_acquainted"
            app:layout_constraintBottom_toTopOf="@+id/singUpFillOutTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/singUpFillOutTv"
            style="@style/signUp_lets_get_textView"
            android:text="@string/reg_view_fillOut"
            android:textSize="@dimen/txtSize_14"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="@+id/signUpViewTopTv"
            app:layout_constraintStart_toStartOf="@+id/signUpViewTopTv"
            app:layout_constraintTop_toBottomOf="@+id/signUpViewTopTv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpViewEmailTIL"
            style="@style/editText_register"
            android:hint="@string/e_mail_hint"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/signUpViewPassTIL"
            app:layout_constraintLeft_toLeftOf="@+id/singUpFillOutTv"
            app:layout_constraintRight_toRightOf="@+id/singUpFillOutTv"
            app:layout_constraintTop_toBottomOf="@+id/guideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpViewEmailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_background"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                app:errorEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpViewPassTIL"
            style="@style/editText_register"
            android:hint="@string/password_hint"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/signUpViewRemmChBx"
            app:layout_constraintEnd_toEndOf="@+id/signUpViewEmailTIL"
            app:layout_constraintStart_toStartOf="@+id/signUpViewEmailTIL"
            app:layout_constraintTop_toBottomOf="@+id/signUpViewEmailTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpViewPassEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_background"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                app:errorEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/signUpViewRemmChBx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/chBx_correct_padding"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/signUp_chBx_text"
            android:textColor="@color/main_text_color"
            app:layout_constraintBottom_toTopOf="@+id/BtnRegister"
            app:layout_constraintStart_toStartOf="@+id/signUpViewPassTIL"
            app:layout_constraintTop_toBottomOf="@+id/signUpViewPassTIL" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BtnRegister"
            style="@style/main_btn_with_border_style"
            android:layout_height="@dimen/signUp_activity_regBtn_height"
            android:text="@string/signUp_activ_regBtn_txt"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/signUpViewConditTv"
            app:layout_constraintStart_toStartOf="@+id/signUpViewRemmChBx"
            app:layout_constraintTop_toBottomOf="@+id/signUpViewRemmChBx" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signUpViewConditTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reg_view_msg_terms"
            android:textColor="@color/white"
            android:textSize="@dimen/txtSize_12"
            app:layout_constraintBottom_toTopOf="@+id/signUpViewQuestTv"
            app:layout_constraintEnd_toEndOf="@+id/BtnRegister"
            app:layout_constraintStart_toStartOf="@+id/BtnRegister"
            app:layout_constraintTop_toBottomOf="@+id/BtnRegister" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signUpViewQuestTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/reg_activity_have_acc_msg"
            android:textColor="@color/main_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signUpViewSgnUpTv"
            app:layout_constraintStart_toStartOf="@+id/signUpViewConditTv"
            app:layout_constraintTop_toBottomOf="@id/signUpViewConditTv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signUpViewSgnUpTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/reg_activity_sing_up_txtBtn"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/signUpViewQuestTv"
            app:layout_constraintEnd_toEndOf="@+id/signUpViewConditTv"
            app:layout_constraintStart_toEndOf="@+id/signUpViewQuestTv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>