<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/main_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clBottom"
            app:layout_constraintHeight_percent="0.5">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_profile"
                android:textColor="@color/white"
                android:textSize="@dimen/txtSize_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/ivDetailAvatar"
                app:layout_constraintVertical_chainStyle="spread"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icArrowBack"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/main_paddings_16"
                android:src="@drawable/ic_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="@+id/tvProfile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvProfile" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivDetailAvatar"
                android:layout_width="match_parent"
                style="@style/profile_avatar"
                tools:src="@drawable/avatar_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProfile"
                app:layout_constraintBottom_toTopOf="@+id/tvDetailName"
                 />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDetailName"
                style="@style/profile_name_Style"
                tools:text="@string/profile_view_name"
                app:layout_constraintBottom_toTopOf="@+id/tvDetailCarreer"
                app:layout_constraintEnd_toEndOf="@+id/ivDetailAvatar"
                app:layout_constraintStart_toStartOf="@+id/ivDetailAvatar"
                app:layout_constraintTop_toBottomOf="@+id/ivDetailAvatar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDetailCarreer"
                style="@style/profile_data_style"
                tools:text="@string/profile_view_profession"
                app:layout_constraintBottom_toTopOf="@+id/tvDetailAddress"
                app:layout_constraintEnd_toEndOf="@+id/tvDetailName"
                app:layout_constraintStart_toStartOf="@+id/tvDetailName"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDetailAddress"
                style="@style/profile_data_style"
                tools:text="@string/profile_view_adress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvDetailName"
                app:layout_constraintStart_toStartOf="@+id/tvDetailName"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailCarreer" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clTop">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDetailMessage"
                style="@style/profile_activity_btn"
                android:text="@string/btn_tv_message"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icFB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btnDetailMessage"
                app:layout_constraintEnd_toStartOf="@+id/icIn"
                app:layout_constraintHorizontal_chainStyle="spread"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_in"
                app:layout_constraintStart_toEndOf="@id/icFB"
                app:layout_constraintTop_toTopOf="@id/icFB"
                app:layout_constraintBottom_toBottomOf="@id/icFB"
                app:layout_constraintEnd_toStartOf="@id/icVk"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icVk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_vk"
                app:layout_constraintStart_toEndOf="@id/icIn"
                app:layout_constraintTop_toTopOf="@id/icIn"
                app:layout_constraintBottom_toBottomOf="@id/icIn"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>